--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1>Webcam Puzzle</h1>
   <video id="webcam" autoplay playsinline style="display:none;"></video>
   <canvas id="puzzleCanvas" width="640" height="480"></canvas>
+  <p>Start dragging the pieces to solve the puzzle!</p>
   <script src="script.js"></script>
 </body>
 </html>
